# gitDemo

./: hello.txt
C/C++11/: deepCopy.cpp  deepCopy.h  listTimer.h  main  main.cpp
clock/: beijingtime.cpp  beijingtime.h  canadatime.cpp  canadatime.h  clock.pro  dongjingtime.cpp  dongjingtime.h  main.cpp  observer.h  subject.cpp  subject.h
imitate/: CMakeLists.txt
imitate/include/: baseMsg.h  conn.h  service.h  serviceMsg.h  socketWorker.h  socket_epoll.h  socket_kqueue.h  spinLock.h  sunnet.h  worker.h
imitate/src/: main.cpp  service.cpp  socketWorker.cpp  socket_epoll.cpp  sunnet.cpp  worker.cpp
record/: C++类型转换.docx  Cookie和Session.docx  HTTP状态码.docx  HTTP请求方法.docx  TCP.docx  record.txt  size_t.docx  代理.docx  使用锁的注意事项.docx  大杂烩.docx  智能指针.docx  登录冲突的情况.docx  粘包和半包.docx  网关、登录、agent.docx  虚析构.docx  连接方式.docx
record/skynet/: Skynet接收消息的时序问题.docx
record/游戏问题/: 关闭服务器的流程.docx  场景服务广播量很大的问题.docx  定时开启活动的做法.docx  工作线程的调度.docx  登出保存数据和退出服务期间更改数据问题.docx  登录冲突的情况.docx  碰撞计算量很大的问题.docx  程序在后台运行.docx  轮询使用场景.docx
